# YoyoPod_Core

./: .dockerignore  .gitignore  AGENTS.md  README.md  pyproject.toml  sitecustomize.py  yoyopod.py
yoyopod_rs/: BUILD.bazel  Cargo.toml
yoyopod_rs/cloud-host/src/: host.rs  worker.rs
yoyopod_rs/cloud-host/tests/: worker.rs
yoyopod_rs/media-host/: BUILD.bazel  Cargo.toml
yoyopod_rs/media-host/src/: host.rs  lib.rs  worker.rs
yoyopod_rs/media-host/tests/: host.rs  library.rs  recents.rs  worker.rs
yoyopod_rs/network-host/: BUILD.bazel
yoyopod_rs/network-host/src/: modem.rs  ppp.rs  protocol.rs  snapshot.rs  worker.rs
yoyopod_rs/network-host/tests/: gps.rs  ppp.rs  protocol.rs  runtime_snapshot.rs  worker.rs
yoyopod_rs/runtime/: BUILD.bazel  Cargo.toml
yoyopod_rs/runtime/src/: cli.rs  config.rs  event.rs  lib.rs  main.rs  runtime_loop.rs  state.rs  worker.rs
yoyopod_rs/runtime/tests/: cli.rs  config.rs  event.rs  runtime_loop.rs  state.rs  worker.rs
yoyopod_rs/ui-host/: BUILD.bazel  Cargo.toml  build.rs
yoyopod_rs/ui-host/src/: worker.rs
yoyopod_rs/ui-host/src/lvgl/: mod.rs  native_backend.rs  scene_backend.rs  sys.rs  theme.rs
yoyopod_rs/ui-host/tests/: lvgl_runtime.rs  render_lvgl.rs  runtime_state_machine.rs  worker.rs
yoyopod_rs/voip-host/: BUILD.bazel  Cargo.toml  build.rs
yoyopod_rs/voip-host/src/: calls.rs  host.rs  lib.rs  main.rs  messages.rs  runtime_snapshot.rs  worker.rs
yoyopod_rs/voip-host/tests/: calls.rs  host.rs  liblinphone.rs  lifecycle.rs  message_store.rs  messages.rs  runtime_snapshot.rs  voice_notes.rs  worker.rs
(+1093 files in other folders)
