package(default_visibility = ["//visibility:public"])

alias(
    name = "media-host",
    actual = "//yoyopod_rs/media-host:yoyopod-media-host",
)

alias(
    name = "ui-host",
    actual = "//yoyopod_rs/ui-host:yoyopod-ui-host",
)

alias(
    name = "voip-host",
    actual = "//yoyopod_rs/voip-host:yoyopod-voip-host",
)

alias(
    name = "runtime",
    actual = "//yoyopod_rs/runtime:yoyopod-runtime",
)
